# vision

./: .gitignore  0vcegw3l.k54.txt  README.md  mosaiques.docx
Data/Code/: Image.cpp  Image.h  Makefile  PrintOpenglErrors.h  RessourcesManager.cpp  correspondance.h  lecture_match.cpp  lecture_match.h  main.cpp  main.cpp.back  mosaic.cpp  mosaic.h  sfml.cpp  shader.cpp  shader.frag  shader.hpp  shader.vert  test2.cpp  vec.cpp  vec.h  vision  vision.cbp  vision.layout
Data/Code/Images/: Image.H  Pixels.h  README  Test.C
Data/Code/Matrices/: Matrix.H  lapack++.H
Data/Code/shader/: sample.frag
Data/Mosaics/Eglise/: Peuc.i.28  i.26  i.matchs  mosaic.mos  mosaic.ppm
Data/Mosaics/Piscine/: piscine3.ppm  piscine4.ppm  piscine5.pgm
Data/Stereo/: 3d.pgm  3d_3.pgm  3d_3_result.pgm  herveleft.pgm  herveright.pgm
Data/code_back/: Image.h  Makefile  correspondance.h  main.cpp  mosaic.cpp  shader.hpp  test  texture.cpp  texture.hpp  vec.h
Data/code_back/shader/: selected.vert
Data/new_code/: CMakeLists.txt  config  i.matchs  matching_points  passthrough.geom  passthrough.vert  tags  test.matchs
Data/new_code/CMakeModules/: FindOpenCV2.cmake  PrefixListGlob.cmake  ProgramFilesGlob.cmake
Data/new_code/include/: Image.h  RessourcesManager.h  fboexception.hpp  mosaic.cpp  mosaic.h
Data/new_code/shader/: sample.vert  shader.vert  shader_text.frag  shader_text.vert
Data/new_code/src/: main_2.cpp  shader.cpp
rendu/: README.md
rendu/Data/Code/: passthrough.frag  todo
rendu/Data/Code/CMakeModules/: CleanDirectoryList.cmake  FindOpenCV.cmake
rendu/Data/Code/include/: Debug.h  fbo.hpp  vec.h
rendu/Data/Code/shader/: haut.frag  haut.vert  selected.frag
rendu/Data/Code/src/: RessourcesManager.cpp  fbo.cpp  main.cpp  test.cpp
rendu/Data/Mosaics/Eglise/: Peuc.i.25  Peuc.i.26  Peuc.i.27  Peuc.i.29  i.25  i.27  i.28  i.29
rendu/Data/Mosaics/Piscine/: piscine1.pgm  piscine1.ppm  piscine2.pgm  piscine2.ppm  (+3 more)
